--- a/app/blog/posts/hello-world.mdx
+++ b/app/blog/posts/hello-world.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Hello World'
+title: 'hello world'
 publishedAt: '2024-12-20'
-summary: 'Yet another blog.'
+summary: ''
 ---
 
-This is my first post, I finally have a blog set up!
+finally have a blog set up
