--- a/app/blog/posts/skill-issue.mdx
+++ b/app/blog/posts/skill-issue.mdx
@@ -6,7 +6,7 @@ summary: ''
 
 There are probably less crude ways to phrase this than the title, but the idea is simple: trick yourself into expanding your horizons and stop wasting time blaming things that seem out of your control.  
 
-Let's take an example. I'm leading a team, and a few members aren’t pulling their weight. Naturally, I'd say something like "they're unmotivated” or “I can’t make people care.” That's lazy. These days, I’d pause and ask – what if I’m missing a skill that could make them more motivated? What if I could be 10% better at communicating expectations or structuring work in a way that fits how they operate best? Am I actually giving 100% from my side before deciding it’s just “their fault”?
+Let's take an example. I'm working in a team, and a few members aren’t pulling their weight. Naturally, I'd say something like "they're unmotivated” or “I can’t make people care.” That's lazy. These days, I’d pause and ask – what if I’m missing a skill that could make them more motivated? What if I could be 10% better at communicating expectations or structuring work in a way that fits how they operate best? Am I actually giving 100% from my side before deciding it’s just “their fault”?
 
 That shift – from “this isn’t my fault” to “this might still be in my control” – changes everything. It’s not about taking the blame; it’s about taking back control. Once I started assuming that every bad outcome had _some_ lever I could’ve pulled differently, things stopped feeling random. I’ve been doing this explicitly for about a year now, and it’s changed how I approach hard problems. It forces me to zoom out, look for leverage, and stop hiding behind “out of my hands.”
 
