blockquote styling + crosspost

--- a/app/blog/posts/wrong.mdx
+++ b/app/blog/posts/wrong.mdx
@@ -4,6 +4,8 @@ publishedAt: '2026-01-20'
 summary: ''
 ---
 
+> This is a crosspost from the [Tensara blog](https://tensara.org/blog/how-wrong-is-too-wrong).
+
 For context, I help run [Tensara](https://tensara.org/), a competitive GPU programming platform with [Somesh](https://someshkar.com/), [Soham](https://sohamjog.com/), and [Harmya](https://harmya.me/). If you haven't heard of it before, the gist is to compete to write the fastest GPU kernel for a given mathematical workload (GEMM, Conv, Attention, etc).
 
 A major part of making this platform work is building robust verification + benchmarking harnesses for our problems. This post is about the former: what it even means to “verify” floating-point GPU kernels, and our efforts to make our acceptance criteria more principled than "ehh `rtol=1e-3` seems fine.”
