minor styling changes

--- a/app/blog/posts/skill-issue.mdx
+++ b/app/blog/posts/skill-issue.mdx
@@ -2,6 +2,7 @@
 title: 'Everything is a Skill Issue'
 publishedAt: '2025-10-28'
 summary: ''
+authors: '[Sarthak Mangla](https://sarthakmangla.com/)'
 ---
 
 There are probably less crude ways to phrase this than the title, but the idea is simple: trick yourself into expanding your horizons and stop wasting time blaming things that seem out of your control.  
