--- a/app/blog/posts/wccl.mdx
+++ b/app/blog/posts/wccl.mdx
@@ -2,11 +2,10 @@
 title: 'Distributed Training via Webcams'
 publishedAt: '2026-02-04'
 summary: ''
+authors: '[Sarthak Mangla](https://sarthakmangla.com/), [Simon Chase](https://simonchase.com/), [Pavitar Saini](https://x.com/pavitarsaini), [Faisal Sayed](https://x.com/faisal_sayed05)'
 ---
 
-This work was done with [Simon](https://simonchase.com/), [Pav](https://x.com/pavitarsaini), and [Faisal](https://x.com/faisal_sayed05) at the [Neo Hackathon](https://neo-hackathon-2025.devpost.com/).
-
-We went into the hackathon with no intention of building something useful. We just wanted a technically clean thing that’s kind of pointless, and to see how far we could push a ridiculous constraint. We chose distributed training for this adventure, with the constraint being to communicate over a completely stupid, nonsensical medium.
+We went into the [Neo hackathon](https://neo-hackathon-2025.devpost.com/) with no intention of building something useful. We just wanted a technically clean thing that’s kind of pointless, and to see how far we could push a ridiculous constraint. We chose distributed training for this adventure, with the constraint being to communicate over a completely stupid, nonsensical medium.
 
 We initially considered familiar channels such as Slack, IRC, Zoom, or Discord. But they’d box us into someone else’s interface and protocol, and we would have a hard time dealing with rate limits. After a few long walks around the Ferry Building, we finally found the right kind of ridiculous: *webcams*.
 
